# PHARE

./: .clang-format  .cuda-gdbinit  .gdbinit  .gitignore  .sublime-project  CMakeLists.txt  gpu.cpp  gpu.hpp  mkn  mkn.cuda.sh  mkn.py  mkn.rocm.sh  mkn.sh  mkn.yaml  mkn.yml  mkn_cuda.sh  mkn_rocm.sh  py.py  readme.md  requirements.txt  sycl.cpp  view_classes.pu  view_components.pu
.github/: build.sh
.github/workflows/: build.yml  cmake.yml  cmake_macos.yml  cmake_macos.yml.off  cmake_ubuntu.yml  mkn.yml
doc/: tiles.md
doc/dev/: aos_times.txt  aosts_times.txt
doc/obs/: docker.md  perf.md  todo.md
phare/pharein/: __init__.py
pyphare/pyphare/: __main__.py  tui.py
res/cmake/: bench.cmake  cppcheck.cmake  def.cmake  dep.cmake  options.cmake  policies.cmake  test.cmake
res/mkn/: base.yaml  clang.yaml  clang10_mpi.yaml  clang_asan.yaml  clang_cuda.yaml  clang_cuda_mpi.yaml  clang_mold.yaml  clang_nvcc.yaml  gcc_asan.yaml  hip.yaml  hip_mpi.yaml  hip_mpi_asan.yaml  icpx.yaml  icpx_mpi.yaml  mpi.yaml  mpi_asan.yaml  nvcc.yaml  nvcpp_cuda.yaml
res/sh/: lint.sh
res/sim/: all.txt  all_tiled.txt
src/: phare_amr.h  phare_amr.hpp  phare_core.h  phare_core.hpp  phare_simulator_options.hpp  phare_solver.h  phare_solver.hpp
src/amr/: CMakeLists.txt  messenger_registration.h  multiphysics_integrator.h  multiphysics_integrator.hpp  samrai.cpp  samrai.hpp
src/core/: CMakeLists.txt  debug.hpp  def.h  def.hpp  errors.hpp  gpu_def.h  logger.cpp  logger.h  logger.hpp  operators.h  operators.hpp  vector.hpp
src/diagnostic/: CMakeLists.txt  diagnostic_manager.h  diagnostic_manager.hpp  diagnostic_model_view.h  diagnostic_model_view.hpp  diagnostic_props.hpp  diagnostics.hpp
src/hdf5/: phare_hdf5.hpp
src/initializer/: CMakeLists.txt  data_provider.h  data_provider.hpp  dictator.cpp  python_data_provider.hpp
src/interop/: patch_state.h
src/phare/: CMakeLists.txt  phare.cpp  phare.hpp  phare_dict.cpp  phare_init.py  phare_init_2d.py
src/pyphare/: diagnostic.h  pyphare.cpp
src/python3/: CMakeLists.txt  cpp_etc.cpp  cpp_mhd_parameters.hpp  cpp_mhd_python_registerer.hpp  cpp_simulator.cpp  cpp_simulator.h  cpp_simulator.hpp  data_wrangler.cpp  data_wrangler.h  data_wrangler.hpp  interop.hpp  interpreter.hpp  particles.h  particles.hpp  patch_data.hpp  patch_level.h  patch_level.hpp  pybind_def.h  pybind_def.hpp
src/restarts/: CMakeLists.txt  restarts.hpp  restarts_manager.hpp  restarts_model_view.hpp
src/simulator/: CMakeLists.txt  phare_types.h  phare_types.hpp  simulator.cpp  simulator.h  simulator.hpp
src/solver/: messenger_registration.h  multiphysics_integrator.h
tests/amr/: amr.hpp  test_hierarchy_fixtures.hpp
tests/core/data/particles/: CMakeLists.txt  test_interop.cpp  test_interop.h  test_interop.hpp  test_main.cpp  test_particle_array_consistency.cpp  test_particle_partitionner.hpp  test_particles.cpp  test_particles.hpp  test_particles_AoSTS.cpp  test_particles_appender.hpp  test_particles_construction.cpp  test_particles_converter.hpp  test_particles_fixtures.hpp  test_particles_partitioning.cpp  test_particles_selecting.cpp  test_particles_serialization.cpp  test_sorting_particles.cpp
tests/core/data/particles/sorting/: test_gpu_sorting_mkn.cpp  test_particle_sorting.cpp
tests/core/numerics/ion_updater/: CMakeLists.txt  test_fixtures.cpp  test_multi_updater.cpp  test_sub_box_updater.cpp  test_updater.cpp  test_updater_pp_main.cpp
tests/diagnostic/: CMakeLists.txt  __init__.py  job_1d.py  job_1d.py.in  job_1d_1core.py  job_1d_2core.py  job_1d_cmp.py  job_1d_float32.py  job_1d_ref.py  job_2d.py  job_2d.py.in  job_2d_1core.py  job_2d_2core.py  job_2d_cmp.py  job_2d_ref.py  job_3d.py  test-diagnostics_1d.cpp  test-diagnostics_2d.cpp  test-diagnostics_3d.cpp  test_diagnostics.cpp  test_diagnostics.h  test_diagnostics.hpp  test_diagnostics.ipp  test_diagnostics_1d_cmp.cpp  test_diagnostics_1d_ref.cpp  test_diagnostics_2d_cmp.cpp  test_diagnostics_2d_ref.cpp  test_main.cpp
tests/functional/: bole.o.py  bole.py  bole2.py  bole2o.py  plasmoid.py  plasmoids.py  plasmoses.py
tests/gpu/: gpu.cpp  gpu.hpp  gpu_float32.cpp
tests/initializer/: CMakeLists.txt  init_functions.h  init_functions.hpp  job.py  phare_dict.cpp  test_initializer.cpp
tests/python3/: test_python_interop_main.cpp
tests/simulator/: CMakeLists.txt  __init__.py  per_test.h  per_test.hpp  pybind.cpp  refined_particle_nbr.py  test_advance.py  test_data_wrangler.py  test_deterministic_particle_initializer.py  (+16 more)
tests/simulator/scheduling/: CMakeLists.txt  job.py  test_simulator_scheduling.cpp
tools/: .cmake.sh  build.sh  check.py  cmake.sh  compare_diags.py  mkn.py  mkn.sh  mkn_dev.py  mkn_dev.sh  mkn_func.sh  mkn_profile.py  mkn_profile.sh  particles.py  phlop.py  segfault_hunter.py
(+770 files in other folders)
